...
	internal lazy var titleLabel: UILabel = {
		let label = UILabel()
		label.translatesAutoresizingMaskIntoConstraints = false
		label.font = UIFont.systemFont(ofSize: 22.0, weight: .regular)
		label.numberOfLines = 2
		label.lineBreakMode = .byTruncatingTail
		label.accessibilityIdentifier = "productTitle"
		return label
	}()

	/// seperator line
	internal lazy var line: UIView = {
		let lineView: UIView = UIView()
...
		label.translatesAutoresizingMaskIntoConstraints = false
		label.font = UIFont.systemFont(ofSize: 26.0, weight: .medium)
		label.adjustsFontSizeToFitWidth = true
		label.minimumScaleFactor = 0.6
		label.textColor = .targetBullseyeRedColor
		label.setContentCompressionResistancePriority(.defaultHigh, for: .horizontal)
		label.accessibilityIdentifier = "productSalePrice"
		return label
	}()

	/// stack view for prices
	internal lazy var pricesStackView: UIStackView = {
		let stack: UIStackView = UIStackView()
...
