...
        harmonyLayout.defaultSectionMargins = HarmonyLayoutMargins(top: .half, right: .none, bottom: .half, left: .none)
        
        let collectionView = UICollectionView(frame: CGRect.zero, collectionViewLayout: harmonyLayout)
        collectionView.backgroundColor = .targetFadeAwayGrayColor
        collectionView.translatesAutoresizingMaskIntoConstraints = false
        collectionView.alwaysBounceVertical = true
		collectionView.accessibilityIdentifier = "productsListCollectionView"
        
        return collectionView
    }()
    
    override func viewDidLoad() {
        super.viewDidLoad()
...
