...
    func updateState() {

		fetchProductsList() { (products, error) in
			if let errorFound = error {
				print("Error: Fetching products error \(errorFound)") // Ideally send to splunk
				let alert = UIAlertController(title: "Uh-oh Something went wrong", message: "Please try again later", preferredStyle: .alert)
				alert.addAction( UIAlertAction(title: "OK", style: .cancel, handler: nil) )
				self.viewController.present(alert, animated: true, completion: nil)
			} else {

				let productsObject: Products? = products

				guard let productsArray: [Product] =  productsObject?.products else {
...
